--- a/scraping/templates/scraping/home.html
+++ b/scraping/templates/scraping/home.html
@@ -3,30 +3,21 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-    {% for obj in object_list %}
-        <div class="card my-2">
-            <div class="card-header">
-                <a href="{{ obj.url }}">{{ obj.title }}</a>
-            </div>
-            <div class="card-body">
-                <h5>{{ obj.company }}</h5>
-                <p class="card-text">{{ obj.description }}</p>
-                <p>{{ obj.city.name }} | {{ obj.language.name }} | <small>{{ obj.timestamp|date:"d-m-Y"  }}</small></p>
-            </div>
-        </div>
-    {% empty %}
-        <h3>К сожалению, по Вашему запросу ничего не найдено. :(</h3>
-    {% endfor %}
-    <div class="row">
-        <div class="col-md-6 mx-auto">
-            <form method="GET" action="">
-                <div class="form-group">
-                    {{ form.as_p }}
-                </div>
-                <button type="submit" class="btn btn-primary">Найти</button>
-            </form>
-        </div>
+<div class="row">
+    <div class="col"><h2 class="text-center my-3">Сервис по сбору и рассылке вакансий</h2>
     </div>
+</div>
+<div class="row">
+    <div class="col-md-8 mx-auto">
+            <h4 class="text-center my-2">Для просмотра доступных вакансий, заполните форму по одному из полей (либо город, либо язык программирования)</h4>
+        <form method="GET" action="{% url 'list' %}">
+            <div class="form-group">
+                {{ form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary">Найти</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
 
 
