--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">JF</a>
+        <a class="navbar-brand" href="{% url 'home' %}">MEDVED</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,6 +46,32 @@
           </ul>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-8 mx-auto my-3">
+                {% if messages %}
+                        {% for message in messages %}
+                            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                      {{ message }}
+                                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                      </button>
+                                    </div>
+                            {% else %}
+                                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                      {{ message }}
+                                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                      </button>
+                                    </div>
+                            {% endif %}
+                        {% endfor %}
+                {% endif %}
+
+            </div>
+        </div>
+    </div>
   <div class="container">
     {% block content %}
     {% endblock %}
