--- a/scraping/templates/scraping/list.html
+++ b/scraping/templates/scraping/list.html
@@ -5,9 +5,7 @@
 {% block content %}
     {% for obj in object_list %}
         <div class="card my-2">
-            <div class="card-header">
-                <a href="{{ obj.url }}">{{ obj.title }}</a>
-            </div>
+            <h5 class="card-header"><a href="{{ obj.url }}">{{ obj.title }}</a></h5>
             <div class="card-body">
                 <h5>{{ obj.company }}</h5>
                 <p class="card-text">{{ obj.description }}</p>
