--- a/templates/base.html
+++ b/templates/base.html
@@ -13,18 +13,12 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">MEDVED</a>
+        <a class="navbar-brand" href="{% url 'home' %}">FINDING yourself</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
             {% if user.is_authenticated %}
              <li class="nav-item">
               <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
@@ -40,9 +34,9 @@
               <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
              </li>
             {% endif %}
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+<!--            </li>-->
           </ul>
         </div>
     </nav>
