--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -18,4 +18,18 @@
         </form>
     </div>
 </div>
+
+<div class="row my-5">
+    <div class="col-md-8 mx-auto">
+            <p class="text-center my-2">Если Вы не нашли подходящий набор Город, Специальность,
+                Вы можете заполнить форму ниже с Вашими пожеланиями. После того,
+                как необходимые данные будут добавлены, Вы получите письмо на указанный Вами имейл.</p>
+        <form method="POST" action="{% url 'accounts:contact' %}">{% csrf_token %}
+            <div class="form-group">
+                {{ contact_form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
