--- a/scraping/templates/scraping/home.html
+++ b/scraping/templates/scraping/home.html
@@ -4,12 +4,15 @@
 
 {% block content %}
 <div class="row">
-    <div class="col"><h2 class="text-center my-3">Сервис по сбору и рассылке вакансий</h2>
+    <div class="col"><h1 class="text-center my-3">Сервис по сбору и рассылке вакансий</h1>
     </div>
 </div>
 <div class="row">
     <div class="col-md-8 mx-auto">
-            <h4 class="text-center my-2">Для просмотра доступных вакансий, заполните форму по одному из полей (либо город, либо язык программирования)</h4>
+            <h4 class="text-center my-2">Мы занимаемся анализом сайтов с вакансиями, согласно настроек наших подписчиков.
+                Вы можете просмартивать актуальные вакансии, просто выбрав необходимый город или специальность.
+                Или же, пройдя несложную <a href="{% url 'accounts:register' %}"> регистрацию</a>,
+                получать каждый день письмо со списком новых вакансий за последние сутки, согласно Ваших потребностей.</h4>
         <form method="GET" action="{% url 'list' %}">
             <div class="form-group">
                 {{ form.as_p }}
