--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
       <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <title>{% block title %} Vacancy app{% endblock %}</title>
+    <title>{% block title %}FINDING yourself{% endblock %}</title>
   </head>
   <body>
 
@@ -22,17 +22,17 @@
           <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
              <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                 <a class="nav-link" href="{% url 'accounts:logout' %}"><h5>Выйти</h5></a>
              </li>
              <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:update' %}">Настройки</a>
+              <a class="nav-link" href="{% url 'accounts:update' %}"><h5>Профиль</h5></a>
              </li>
             {% else %}
              <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+                 <a class="nav-link" href="{% url 'accounts:login' %}"><h5>Войти</h5></a>
              </li>
               <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
+                  <a class="nav-link" href="{% url 'accounts:register' %}"><h5>Регистрация</h5></a>
              </li>
             {% endif %}
 <!--            <li class="nav-item">-->
@@ -71,7 +71,14 @@
     {% block content %}
     {% endblock %}
   </div>
-
+  {% block footer %}
+    <div class="footer my-3">
+        <footer class="page-footer">
+          <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="https://vk.com/oldschol">Autor</a>
+          </div>
+        </footer>
+  {% endblock %}
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
