--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,8 @@
   {% block footer %}
     <div class="footer my-3">
         <footer class="page-footer">
-          <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://vk.com/oldschol">Autor</a>
+          <div class="footer-copyright text-center py-1">© 2020 Copyright:
+            <a href="https://fin-you.herokuapp.com/">Finding-yorself</a>
           </div>
         </footer>
   {% endblock %}
