--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,14 @@
     color: #C0C0C0;
 
 }
-footer {
-    background-color: #e3f2fd
+
+
+
+.footer-copyright {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 80px;
+	background-color: #e3f2fd
 }
