--- a/scraping/templates/scraping/list.html
+++ b/scraping/templates/scraping/list.html
@@ -70,7 +70,7 @@
             <div class="form-group">
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary">Найти</button>
+            <button type="submit" class="btn btn-primary" style="margin-bottom: 10px;">Найти</button>
         </form>
     </div>
 </div>
