--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                 <div class="col-12 contacts">
                     <h2>Contacts:</h2>
                 </div>
-                <div class="col-12 social padding">
+                <div class="col-12 social padding" style="margin-bottom: 10px;">
                     <a href="https://github.com/Subdowell"><i class="fa fa-github fa-2x"></i></a>
                     <a href="https://www.youtube.com/channel/UC6Oxi97SMn5luk64dzb-RlA?view_as=subscriber"><i class="fa fa-youtube fa-2x"></i></a>
                     <a href="https://www.instagram.com/bumajnii_kolpak/"><i class="fa fa-instagram fa-2x"></i></a>
