--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>{% block title %}FINDING yourself{% endblock %}</title>
   </head>
-  <body>
+  <body bgcolor="#000" background="{% static 'back.jpg'%}">
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="{% url 'home' %}" id="brand">FINDING yourself</a>
